# switch-operator

./: .gitignore  LICENSE  README.md  getting_started.md  pyproject.toml  ruff.toml
firmware/: build_and_upload.sh  config.h.example  esp32.ino
firmware/esp32/: esp32.ino
server/: app.py  device.py  model.py  mqtt.py
server/static/: dashboard.css
server/templates/: dashboard.html
server/templates/fragments/: devices.html  servo_move.html  servo_rotate.html  voice_section.html
